argocd/river-ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: river-ui
  labels:
    app.kubernetes.io/name: river-ui
    app.kubernetes.io/part-of: beaesthetic
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: river-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: river-ui
        app.kubernetes.io/part-of: beaesthetic
    spec:
      automountServiceAccountToken: false
      containers:
        - name: river-ui
          image: ghcr.io/riverqueue/riverui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
